Sources/sdk/sccio.h


typedef enum DCT_MARKERtag
{                           
      SOF0  = 0xc0,         
      SOF1  = 0xc1,         
      SOF2  = 0xc2,         
      SOF3  = 0xc3,         
      SOF5  = 0xc5,         
      SOF6  = 0xc6,         
      SOF7  = 0xc7,         
      JPG   = 0xc8,         
      SOF9  = 0xc9,         
      SOF10 = 0xca,         
      SOF11 = 0xcb,         
      SOF13 = 0xcd,         
      SOF14 = 0xce,         
      SOF15 = 0xcf,         
      DHT   = 0xc4,         
      DAC   = 0xcc,         
      RST0  = 0xd0,         
      RST1  = 0xd1,         
      RST2  = 0xd2,         
      RST3  = 0xd3,         
      RST4  = 0xd4,         
      RST5  = 0xd5,         
      RST6  = 0xd6,         
      RST7  = 0xd7,         
      SOI   = 0xd8,         
      EOI   = 0xd9,         
      SOS   = 0xda,         
      DQT   = 0xdb,         
      DNL   = 0xdc,         
      DRI   = 0xdd,         
      DHP   = 0xde,         
      EXP   = 0xdf,         
      APP0  = 0xe0,         
      APP1  = 0xe1,
      APP2  = 0xe2,
      APP3  = 0xe3,
      APP4  = 0xe4,
      APP5  = 0xe5,
      APP6  = 0xe6,
      APP7  = 0xe7,
      APP8  = 0xe8,
      APP9  = 0xe9,
      APP10 = 0xea,
      APP11 = 0xeb,
      APP12 = 0xec,
      APP13 = 0xed,
      APP14 = 0xee,         
      APP15 = 0xef,
      JPG0  = 0xf0,
      JPG13 = 0xfd,
      COM   = 0xfe,         
      TEM   = 0x01,         
      MARKER_ERROR = 0x100
} DCT_MARKER;
#define NUM_QUANT_TBLS      4   
#define NUM_HUFF_TBLS       4   
#define MAX_COMPS_IN_SCAN   4   
typedef struct DCTCOMP_INFOtag
{
    VTBYTE  byComponentID;        
    VTBOOL  bInScan;              
    VTBYTE  byHSampFactor;        
    VTBYTE  byVSampFactor;        
    VTBYTE  byQuantTableNo;       
    VTBYTE  byDCHuffTableNo;      
    VTBYTE  byACHuffTableNo;      
    VTSHORT nPrevDC;              
} DCTCOMP_INFO;
typedef struct DCTHUFF_TBLtag
{
    VTWORD  firstSym[17];         
    VTDWORD firstCode[17];        
    VTBYTE  numCodes[17];         
    VTBYTE  sym[256];             
} DCTHUFF_TBL;
typedef struct DCTQUANT_TBLtag
{
    VTHANDLE hQuantElems;
    VTLPBYTE pQuantElems;
} DCTQUANT_TBL;
typedef struct IODCTDATAtag
{
    VTWORD    wImageWidth;            
    VTWORD    wImageHeight;           
    VTBYTE    byMCUWidth;             
    VTBYTE    byMCUHeight;            
    VTHANDLE  hCompInfo[MAX_COMPS_IN_SCAN];
    DCTCOMP_INFO* pCompInfo[MAX_COMPS_IN_SCAN];   
    VTBYTE    byNumComps;             
    VTBYTE    byColorTransform;       
    VTBOOL    bGotAdobeMarker;        
    VTWORD    wRestartInterval;       
    DCTQUANT_TBL QuantTbls[NUM_QUANT_TBLS];   
    VTBYTE    byNumQuantTbls;         
    VTHANDLE  hDCHuffTbls[NUM_HUFF_TBLS];      
    DCTHUFF_TBL* pDCHuffTbls[NUM_HUFF_TBLS];
    VTBYTE    byNumDCHuffTbls;        
    VTHANDLE  hACHuffTbls[NUM_HUFF_TBLS];      
    DCTHUFF_TBL* pACHuffTbls[NUM_HUFF_TBLS];
    VTBYTE    byNumACHuffTbls;        
    VTHANDLE  hRowBuf;                
    VTLPBYTE  pRowBuf;                
    VTDWORD   dwRowBufWidth;
    VTBYTE    byCurrentComp;          
    VTWORD    wCurrentX;              
    VTWORD    wCurrentY;              
    VTBYTE    byCurrentdY;            
    VTSHORT   wRestartCtr;            
    DCT_MARKER eRrestartMarker;       
    VTBYTE    byInBuf;                
    VTBYTE    byNumInBits;            
    VTBYTE    bySs, bySe;             
    VTBYTE    byAh, byAl;             
    VTBOOL    bProgressiveMode;       
    VTHANDLE  hDctClip;
    VTLPBYTE  pDctClip;
} IODCTDATA, * PIODCTDATA;
#define MIFCOMPRESS_BINARYINASCII  1
#define MIFCOMPRESS_UNKNOWN        2
#define IMAGELINEBUFSIZE  0x80
typedef struct IOMIFAsciiDecodetag
{
    VTHANDLE      hSrcbuf;
    VTLPBYTE      Srcbuf;
    VTBOOL        HexMode;            
    VTBOOL        FirstTime;
    VTBYTE        UnGetVal;
    VTBOOL        UnGetIsValid;
    VTLONG        ByteCount;
    VTBYTE        Datatype;
    VTBOOL        DecodeComplete;
} IOMIFAsciiDecode, * PIOMIFAsciiDecode;
#define CCITT_MASK_ENCODING         0x0000FFFF  
#define CCITT_MASK_DAMAGE_ROWS      0xFFFF0000
#define CCITT_MASK_EOL              0x00000001  
#define CCITT_MASK_EOB              0x00000002
#define CCITT_MASK_BYTE_ALIGN       0x00000004
#define CCITT_MASK_WORD_ALIGN       0x00000008
#define CCITT_MASK_BLACK            0x00000010
#define CCITT_MASK_LSBTOMSB         0x00000020
#define CCITT_MASK_GROUP3RLE        0x00000040
#define CCITT_MASK_COLUMNS          0x0000FFFF  
#define CCITT_MASK_ROWS             0xFFFF0000
typedef struct IORC4DATAtag
{
    VTHANDLE hKey;
    VTBYTE*  pKey;
    VTBYTE   byKeyLength;
    VTRC4_CTX RC4State;
} IORC4DATA, * PIORC4DATA;
typedef struct IOAESDATAtag
{
#ifdef SCCFEATURE_64BITIO
    VTOFF_T  offFileSize;     
#else
    VTDWORD  offFileSize;     
#endif
    VTDWORD  dwType;          
    VTDWORD  dwMode;          
    VTBYTE   szAESBlock[16];  
    VTBYTE  *pKeySchedule;    
} IOAESDATA, *PIOAESDATA;
typedef struct IOZIPCRYPTODATAtag
{
#ifdef SCCFEATURE_64BITIO
    VTOFF_T  offFileSize;
#else
    VTDWORD  offFileSize;
#endif
    VTDWORD  dwCrcTable[256];
    VTDWORD  Key[3];
} IOZIPCRYPTODATA, *PIOZIPCRYPTODATA;
#define JBIG2_SYMBOL_DICT           0
#define JBIG2_INT_TEXT              4
#define JBIG2_IMM_TEXT              6
#define JBIG2_IMM_LL_TEXT           7
#define JBIG2_PATTERN_DICT          16
#define JBIG2_INT_HALFTONE          20
#define JBIG2_IMM_HALFTONE          22
#define JBIG2_IMM_LL_HALFTONE       23
#define JBIG2_INT_GENERIC           36
#define JBIG2_IMM_GENERIC           38
#define JBIG2_IMM_LL_GENERIC        39
#define JBIG2_INT_GENERIC_REF       40
#define JBIG2_IMM_GENERIC_REF       42
#define JBIG2_IMM_LL_GENERIC_REF    43
#define JBIG2_PAGE_INFO             48
#define JBIG2_END_OF_PAGE           49
#define JBIG2_END_OF_STRIPE         50
#define JBIG2_END_OF_FILE           51
#define JBIG2_PROFILES              52
#define JBIG2_TABLES                53
#define JBIG2_EXTENSIONS            62
#define JBIG2_INTCONTEXTSIZE 512
#define JBIG2_BOTTOMLEFT    0
#define JBIG2_TOPLEFT       1
#define JBIG2_BOTTOMRIGHT   2
#define JBIG2_TOPRIGHT      3
#define JBIG2_OR            0
#define JBIG2_AND           1
#define JBIG2_XOR           2
#define JBIG2_XNOR          3
typedef struct JBIGHEADERDATA
{
    VTDWORD dwSegmentNumber;
    VTDWORD dwFlags;
    VTBYTE  bySegmentType;
    VTDWORD dwReferredToCount;
    VTBYTE  byRetainFlags;
    union
    {
        VTBYTE  bySegmentPage;
        VTDWORD dwSegmentPage;
    } uPageAssociation;
    VTDWORD dwSegmentDataLength;
} JBIG_STRUCT, *LPJBIG_STRUCT;
typedef struct JBIG2_RegionSegmentInfo_tag
{
    VTDWORD dwXPos;
    VTDWORD dwYPos;
    VTDWORD dwWidth;
    VTDWORD dwHeight;
    VTDWORD dwByteWidth;
    VTBYTE  byFlags;
} JBIG2_RegionSegmentInfo, *PJBIG2_RegionSegmentInfo;
typedef enum HUFFMAN_ROW_TYPEtag
{
	ROW_NORMAL,
	ROW_OOB,
	ROW_LOWER,
	ROW_HIGHER
}HUFFMAN_ROW_TYPE;