Sources/sccio.pas


     PIODCTDATA = ^IODCTDATA;
     IODCTDATA = record
          wImageWidth : VTWORD;
          wImageHeight : VTWORD;
          byMCUWidth : VTBYTE;
          byMCUHeight : VTBYTE;
          hCompInfo : array[0..(MAX_COMPS_IN_SCAN)-1] of VTHANDLE;
          pCompInfo : array[0..(MAX_COMPS_IN_SCAN)-1] of PDCTCOMP_INFO;
          byNumComps : VTBYTE;
          byColorTransform : VTBYTE;
          bGotAdobeMarker : VTBOOL;
          wRestartInterval : VTWORD;
          QuantTbls : array[0..(NUM_QUANT_TBLS)-1] of DCTQUANT_TBL;
          byNumQuantTbls : VTBYTE;
          hDCHuffTbls : array[0..(NUM_HUFF_TBLS)-1] of VTHANDLE;
          pDCHuffTbls : array[0..(NUM_HUFF_TBLS)-1] of PDCTHUFF_TBL;
          byNumDCHuffTbls : VTBYTE;
          hACHuffTbls : array[0..(NUM_HUFF_TBLS)-1] of VTHANDLE;
          pACHuffTbls : array[0..(NUM_HUFF_TBLS)-1] of PDCTHUFF_TBL;
          byNumACHuffTbls : VTBYTE;
          hRowBuf : VTHANDLE;
          pRowBuf : VTLPBYTE;
          dwRowBufWidth : VTDWORD;
          byCurrentComp : VTBYTE;
          wCurrentX : VTWORD;
          wCurrentY : VTWORD;
          byCurrentdY : VTBYTE;
          wRestartCtr : VTSHORT;
          eRrestartMarker : DCT_MARKER;
          byInBuf : VTBYTE;
          byNumInBits : VTBYTE;
          bySs : VTBYTE;
          bySe : VTBYTE;
          byAh : VTBYTE;
          byAl : VTBYTE;
          bProgressiveMode : VTBOOL;
          hDctClip : VTHANDLE;
          pDctClip : VTLPBYTE;
       end;
     PPIODCTDATA = ^PIODCTDATA;
  {******************************************************************* }
  {******************************************************************* }
  {************************                  ************************* }
  {************************  MIFAsciiDecode  ************************* }
  {************************                  ************************* }
  {******************************************************************* }
  {******************************************************************* }
  { Named MIFAsciiDecode because I have not discovered the real format name  }
  { MIFAsciiDecode Support added Nov 11, 2001  }
  { these values correspond to the format, do not change  }

  const
     MIFCOMPRESS_BINARYINASCII = 1;
     MIFCOMPRESS_UNKNOWN = 2;
     IMAGELINEBUFSIZE = $80;
  { Data is binary or ascii  }

  type

     PIOMIFAsciiDecode = ^IOMIFAsciiDecode;
     IOMIFAsciiDecode = record
          hSrcbuf : VTHANDLE;
          Srcbuf : VTLPBYTE;
          HexMode : VTBOOL;
          FirstTime : VTBOOL;
          UnGetVal : VTBYTE;
          UnGetIsValid : VTBOOL;
          ByteCount : VTLONG;
          Datatype : VTBYTE;
          DecodeComplete : VTBOOL;
       end;
     PPIOMIFAsciiDecode = ^PIOMIFAsciiDecode;
  {******************************************************************* }
  {******************************************************************* }
  {********************                         ********************** }
  {********************  CCITT G3D1, G3D2, G4D2 ********************** }
  {********************                         ********************** }
  {******************************************************************* }
  {******************************************************************* }
  {
   | For transfering extra parmeters needed for CCITT decompression from IOCOMPRESSDATA, following is used:
   |  dwReserved1 -
   |          bits 0-15:  K - a code identifying the encoding scheme used:
   |          (int)       K<0 Pure G42D encoding
   |                      K=0 Pure G31D encoding
   |                      K>0 Mixed G3 1D and 2D encoding, in which a line encoded 1D can be
   |                          followed by at most K-1 lines encoded 2D.
   |          bits 16-32: DamagedRowsBeforeError - The number of damaged rows of data to be tolerated
   |          (int)       before and error occures.  This entry applies only if EndOfLine is true and
   |                      K is nonnegative.
   |  dwReserved2 -
   |          bit 0:      EndOfLine - a flag indicating whether EOL bit patterns are required to be
   |                      present in the encoding.  Decompression always accepts EOL bit patterns, but
   |                      requires them only if EndOfLine is true.
   |          bit 1:      EndOfBlock - a flag indicating whether the decompression expects the encoded data
   |                      to be terminated by an EOB pattern, overriding the Rows parameter.  If false,
   |                      the decompression stops when it has decoded the number of lines indicated by Rows,
   |                      or when its data has been exausted, whichever occurs first.  The bit pattern
   |                      depends on K parameter and can be either EOFB (end-of-facsimile-block) or RTC
   |                      (return-to-control).
   |          bit 2:      EncodedByteAlign - A flag indicating whether the decompression expects extra
   |                      0-bits before each encoded line so that the line begins on a byte boundary.
   |                      If true, the filter skips over encoded bits to begin decoding each line at byte
   |                      boundary.
   |          bit 3:      EncodedWordAlign - Indicates that each line of encoded data begins on a word
   |                      (16-bit) boundary.
   |          bit 4:      Blacks1 - a flag indicating whether 1-bits are to be interpreted as black pixels
   |                      and 0-bits as white pixels, the reverse of the normal PDF convention for monochrome
   |                      image data.
   |          bit 5:      LSBtoMSB - Indicates that the fill order is least significant to most significant.
   |          bit 6:      Group3RLE - Indicates that the data is encoded using RLE compression. This is only
   |                      used by TIFF files currently. Only applies if K=0.
   |  dwReserved3 -
   |          bits 0-15:  Columns - the width of the image in pixels.  If the value is not a multiple of 8,
   |                      the compression should adjust the width of the unencoded image to the next multiple
   |                      of 8, so that each line starts on a byte boundary.
   |          bits 16-32: The height of the image in scan lines.  If the value is 0 or absent, the images
   |                      height is not predetermined, and the encoded data must be terminated by an EOB bit
   |                      pattern or by the end of the stream data.
   |
    }
  { Masks for extracting data from the reserved words.  }
  { dwReserved1  }

  const
     CCITT_MASK_ENCODING = $0000FFFF;
     CCITT_MASK_DAMAGE_ROWS = $FFFF0000;
  { dwReserved2  }
     CCITT_MASK_EOL = $00000001;
     CCITT_MASK_EOB = $00000002;
     CCITT_MASK_BYTE_ALIGN = $00000004;
     CCITT_MASK_WORD_ALIGN = $00000008;
     CCITT_MASK_BLACK = $00000010;
     CCITT_MASK_LSBTOMSB = $00000020;
     CCITT_MASK_GROUP3RLE = $00000040;
  { dwReserved3  }
     CCITT_MASK_COLUMNS = $0000FFFF;
     CCITT_MASK_ROWS = $FFFF0000;
  {******************************************************************* }
  {******************************************************************* }
  {********************                         ********************** }
  {********************           RC4           ********************** }
  {********************                         ********************** }
  {******************************************************************* }
  {******************************************************************* }

  type

     PIORC4DATA = ^IORC4DATA;
     IORC4DATA = record
          hKey : VTHANDLE;
          pKey : PVTBYTE;
          byKeyLength : VTBYTE;
          RC4State : VTRC4_CTX;
       end;
     PPIORC4DATA = ^PIORC4DATA;
  {******************************************************************* }
  {******************************************************************* }
  {********************                         ********************** }
  {********************           AES           ********************** }
  {********************                         ********************** }
  {******************************************************************* }
  {******************************************************************* }
  { AES type (i.e. AES-128, AES-192, AES-256)  }
  { mode of operation                          }
  { generic AES block                          }
  { pointer to an AES key schedule             }

  type

     PIOAESDATA = ^IOAESDATA;
     IOAESDATA = record
{$ifdef SCCFEATURE_64BITIO}
  { decrypted file size  }
          offFileSize : VTOFF_T;
{$else}
  { decrypted file size  }
          offFileSize : VTDWORD;
{$endif}
          dwType : VTDWORD;
          dwMode : VTDWORD;
          szAESBlock : array[0..15] of VTBYTE;
          pKeySchedule : PVTBYTE;
       end;
     PPIOAESDATA = ^PIOAESDATA;

  type

     PIOZIPCRYPTODATA = ^IOZIPCRYPTODATA;
     IOZIPCRYPTODATA = record
{$ifdef SCCFEATURE_64BITIO}
          offFileSize : VTOFF_T;
{$else}
          offFileSize : VTDWORD;
{$endif}
          dwCrcTable : array[0..255] of VTDWORD;
          Key : array[0..2] of VTDWORD;
       end;
     PPIOZIPCRYPTODATA = ^PIOZIPCRYPTODATA;
  {******************************************************************* }
  {******************************************************************* }
  {********************                         ********************** }
  {********************          JBIG2          ********************** }
  {********************                         ********************** }
  {******************************************************************* }
  {******************************************************************* }

  const
     JBIG2_SYMBOL_DICT = 0;
     JBIG2_INT_TEXT = 4;
     JBIG2_IMM_TEXT = 6;
     JBIG2_IMM_LL_TEXT = 7;
     JBIG2_PATTERN_DICT = 16;
     JBIG2_INT_HALFTONE = 20;
     JBIG2_IMM_HALFTONE = 22;
     JBIG2_IMM_LL_HALFTONE = 23;
     JBIG2_INT_GENERIC = 36;
     JBIG2_IMM_GENERIC = 38;
     JBIG2_IMM_LL_GENERIC = 39;
     JBIG2_INT_GENERIC_REF = 40;
     JBIG2_IMM_GENERIC_REF = 42;
     JBIG2_IMM_LL_GENERIC_REF = 43;
     JBIG2_PAGE_INFO = 48;
     JBIG2_END_OF_PAGE = 49;
     JBIG2_END_OF_STRIPE = 50;
     JBIG2_END_OF_FILE = 51;
     JBIG2_PROFILES = 52;
     JBIG2_TABLES = 53;
     JBIG2_EXTENSIONS = 62;
     JBIG2_INTCONTEXTSIZE = 512;
     JBIG2_BOTTOMLEFT = 0;
     JBIG2_TOPLEFT = 1;
     JBIG2_BOTTOMRIGHT = 2;
     JBIG2_TOPRIGHT = 3;
     JBIG2_OR = 0;
     JBIG2_AND = 1;
     JBIG2_XOR = 2;
     JBIG2_XNOR = 3;
  {  union

          BYTE    byRetainFlags;
          LPDWORD pdwRetainFlags;
       uRetainUnion;
      union

          LPBYTE  byteSize;
          LPWORD  wordSize;
          LPDWORD dwordSize;
       uReferredSegments;
    }

  type

     PJBIGHEADERDATA = ^JBIGHEADERDATA;
     JBIGHEADERDATA = record
          dwSegmentNumber : VTDWORD;
          dwFlags : VTDWORD;
          bySegmentType : VTBYTE;
          dwReferredToCount : VTDWORD;
          byRetainFlags : VTBYTE;
          uPageAssociation : record
              case longint of
                 0 : ( bySegmentPage : VTBYTE );
                 1 : ( dwSegmentPage : VTDWORD );
              end;
          dwSegmentDataLength : VTDWORD;
       end;
//     PLPJBIG_STRUCT = ^LPJBIG_STRUCT;

     PJBIG2_RegionSegmentInfo = ^JBIG2_RegionSegmentInfo;
     JBIG2_RegionSegmentInfo = record
          dwXPos : VTDWORD;
          dwYPos : VTDWORD;
          dwWidth : VTDWORD;
          dwHeight : VTDWORD;
          dwByteWidth : VTDWORD;
          byFlags : VTBYTE;
       end;
     PPJBIG2_RegionSegmentInfo = ^PJBIG2_RegionSegmentInfo;

     HUFFMAN_ROW_TYPE =  Longint;
     PHUFFMAN_ROW_TYPE = ^HUFFMAN_ROW_TYPE;
     Const
       ROW_NORMAL = 0;
       ROW_OOB = 1;
       ROW_LOWER = 2;
       ROW_HIGHER = 3;

  type
